--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,3 @@
-#Sat Sep 15 17:07:54 CST 2012
+#Tue Feb 05 16:05:51 CST 2013
 eclipse.preferences.version=1
-include_path=0;/myHomePage2012\u00051;E\:/wamp/www/myHomePage2012/inc
+include_path=0;/myHomePage2012
